# rust-learn

./: Cargo.toml  README.md
02-ownership/: Cargo.toml
02-ownership/src/: borrow_1.rs  borrow_2.rs  copy_trait.rs  ownership1.rs  ownership2.rs  rc.rs
03-lifecycle/: Cargo.toml
03-lifecycle/src/: exercise_strtok.rs  lifecycle_1.rs  lifecycle_2.rs  lifecycle_3.rs
04-memmange/: Cargo.toml
04-memmange/src/: mem_layout_1.rs
05-typesystem/: Cargo.toml
05-typesystem/src/: type_1.rs
